@@ -1,4 +1,5 @@
 @echo off
 echo Starting Memory Game Client...
-java -cp "bin;lib/*" Main client
+set JAVAFX_PATH=lib\javafx-sdk\lib
+java --module-path "%JAVAFX_PATH%" --add-modules javafx.controls,javafx.fxml -cp "bin;lib/*;%JAVAFX_PATH%/*" Main client
 pause
